--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
+		<meta property="og:title" content="Welcome!">
+		<meta property="og:site_name" content="Glacier Dog">
+		<meta property="og:url" content="https://www.glacier.dog/">
+		<meta property="og:description" content="welcome to my dumb website, Glacier Dog! it's just a website for me (noble) to mess around with. take a look around!">
+		<meta property="og:type" content="website">
+		<meta property="og:image" content="https://github.com/noblereign/noblereign.github.io/raw/master/glacierdog.jpg">
 		<script src="snowstorm.js"></script>
         <title>Glacier Dog</title>
 		<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
