--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
 		<meta property="og:title" content="Welcome!">
 		<meta property="og:site_name" content="Glacier Dog">
@@ -7,6 +7,10 @@
 		<meta property="og:description" content="welcome to my dumb website, Glacier Dog! it's just a website for me (noble) to mess around with. take a look around!">
 		<meta property="og:type" content="website">
 		<meta property="og:image" content="https://github.com/noblereign/noblereign.github.io/raw/master/glacierdog.jpg">
+		
+		<meta charset="utf-8">
+		<meta name="Description" CONTENT="Welcome to my personal website, Glacier Dog! Used to show off cool-ish things I own/have done. Take a look around!">
+		
 		<script src="snowstorm.js"></script>
         <title>Glacier Dog</title>
 		<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
