--- a/404.html
+++ b/404.html
@@ -2,11 +2,11 @@
 <html>
     <head>
         <title>Uhhh.. meow?</title>
-		<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-		<link rel="manifest" href="site.webmanifest">
-        <link rel="stylesheet" href="404.css">
+		<link rel="apple-touch-icon" sizes="180x180" href="https://raw.githubusercontent.com/noblereign/noblereign.github.io/master/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="https://raw.githubusercontent.com/noblereign/noblereign.github.io/master/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="https://raw.githubusercontent.com/noblereign/noblereign.github.io/master/favicon-16x16.png">
+		<link rel="manifest" href="https://raw.githubusercontent.com/noblereign/noblereign.github.io/master/site.webmanifest">
+        <link rel="stylesheet" href="https://raw.githubusercontent.com/noblereign/noblereign.github.io/master/404.css">
 		<style>
 			@import url('https://fonts.googleapis.com/css2?family=Catamaran:wght@300;400;500;600;700&display=swap');
 			a:link {
@@ -45,6 +45,6 @@
 			<span>art by </span>
 			<a href="https://twitter.com/Frickle_">Meijer</a>
 		</footer>
-		<script src="404.js"></script>
+		<script src="https://raw.githubusercontent.com/noblereign/noblereign.github.io/master/404.js"></script>
     </body>
 </html>
