--- a/404.html
+++ b/404.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
+	
+		<meta property="og:title" content="404">
+		<meta property="og:site_name" content="Glacier Dog Not Found">
+		<meta property="og:url" content="https://glacier.dog/">
+		<meta property="og:description" content="Enter The Void">
+		<meta property="og:type" content="website">
+		<meta property="og:image" content="https://github.com/noblereign/noblereign.github.io/raw/master/missing_content.jpg">
+	
         <title>Uhhh.. meow?</title>
 		<link rel="apple-touch-icon" sizes="180x180" href="https://cdn.jsdelivr.net/gh/noblereign/noblereign.github.io/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="https://cdn.jsdelivr.net/gh/noblereign/noblereign.github.io/favicon-32x32.png">
