--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
 		<meta property="og:url" content="https://glacier.dog/">
 		<meta property="og:description" content="Enter The Void">
 		<meta property="og:type" content="website">
-		<meta property="og:image" content="https://github.com/noblereign/noblereign.github.io/raw/master/missing_content.jpg">
+		<meta property="og:image" content="https://cdn.jsdelivr.net/gh/noblereign/noblereign.github.io/missing_content.jpg">
 	
         <title>Uhhh.. meow?</title>
 		<link rel="apple-touch-icon" sizes="180x180" href="https://cdn.jsdelivr.net/gh/noblereign/noblereign.github.io/apple-touch-icon.png">
