--- a/chat/index.html
+++ b/chat/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-		<meta property="og:title" content="Welcome!">
+		<meta property="og:title" content="Chat">
 		<meta property="og:site_name" content="Glacier Dog">
-		<meta property="og:url" content="https://www.glacier.dog/">
-		<meta property="og:description" content="welcome to my dumb website, Glacier Dog! it's just a website for me (noble) to mess around with. take a look around!">
+		<meta property="og:url" content="https://glacier.dog/">
+		<meta property="og:description" content="Grrr, bark, woof, woof, AWROOOOOO!">
 		<meta property="og:type" content="website">
 		<meta property="og:image" content="https://cdn.jsdelivr.net/gh/noblereign/noblereign.github.io/glacierdog.jpg">
-		
+	
 		<meta charset="utf-8">
-		<meta name="Description" CONTENT="Welcome to my personal website, Glacier Dog! Used to show off cool-ish things I own/have done. Take a look around!">
-		
-		<script src="snowstorm.js"></script>
-        <title>Glacier Dog</title>
+		<meta name="Description" CONTENT="A chat room powered by tlk.io, because why not?">
+	
+		<script src="https://cdn.jsdelivr.net/gh/noblereign/noblereign.github.io/snowstorm.js"></script>
+        <title>Talk to Glacier Dog</title>
 		<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
@@ -47,18 +47,14 @@
 		</style>
     </head>
     <body>
+		<header>
+			<p>Chat</p>
+			<a href="https://glacier.dog">go back</a>
+			<hr class="seperator">
+		</header>
         <main style="list-style-type:none;">
-			<li><a href="https://about.glacier.dog">About</a></li>
-			<hr class="seperator">
-			<li><a href="https://user.rblx.name/NobleReign">Roblox</a></li>
-			<li><a href="https://twitter.com/NobleFurLyfe">Twitter</a></li>
-			<li><a href="mailto:frostbite@glacier.dog">Email</a></li>
-			<hr class="seperator">
-			<li><a href="/chat">Chatroom</a></li>
-			<li><a href="https://frostbite.glacier.dog">Frost art!</a></li>
+			<p>Talk to other people on the website. Chat powered by tlk.io</p>
 		</main>
-		<footer>
-			<p>welcome to my dumb website</p>
-		</footer>
+		<div id="tlkio" data-channel="glacierdogfrostbite" data-theme="theme--night" style="width:100%;height:100%;"></div><script async src="http://tlk.io/embed.js" type="text/javascript"></script>
     </body>
 </html>
