--- a/chat/index.html
+++ b/chat/index.html
@@ -55,6 +55,6 @@
         <main style="list-style-type:none;">
 			<p>Talk to other people on the website. Chat powered by tlk.io</p>
 		</main>
-		<div id="tlkio" data-channel="glacierdogfrostbite" data-theme="theme--night" style="width:100%;height:100%;"></div><script async src="http://tlk.io/embed.js" type="text/javascript"></script>
+		<div id="tlkio" data-channel="glacierdogfrostbite" data-theme="theme--night" style="width:100%;height:100%;"></div><script async src="https://tlk.io/embed.js" type="text/javascript"></script>
     </body>
 </html>
