--- a/chat/index.html
+++ b/chat/index.html
@@ -11,7 +11,6 @@
 		<meta charset="utf-8">
 		<meta name="Description" CONTENT="A chat room powered by tlk.io, because why not?">
 	
-		<script src="https://cdn.jsdelivr.net/gh/noblereign/noblereign.github.io/snowstorm.js"></script>
         <title>Talk to Glacier Dog</title>
 		<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
@@ -53,7 +52,7 @@
 			<hr class="seperator">
 		</header>
         <main style="list-style-type:none;">
-			<p>Talk to other people on the website. Chat powered by tlk.io</p>
+			<p>Talk to other people on the website. Chat powered by tlk.io (If you use any privacy plugins such as Privacy Possum you may need to disable them for social media logins)</p>
 		</main>
 		<div id="tlkio" data-channel="glacierdogfrostbite" data-theme="theme--night" style="width:100%;height:100%;"></div><script async src="https://tlk.io/embed.js" type="text/javascript"></script>
     </body>
