--- a/chat/index.html
+++ b/chat/index.html
@@ -8,6 +8,8 @@
 		<meta property="og:type" content="website">
 		<meta property="og:image" content="https://cdn.jsdelivr.net/gh/noblereign/noblereign.github.io/glacierdog.jpg">
 	
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		
 		<meta charset="utf-8">
 		<meta name="Description" CONTENT="A chat room powered by tlk.io, because why not?">
 	
