--- a/chat/index.html
+++ b/chat/index.html
@@ -54,8 +54,8 @@
 			<hr class="seperator">
 		</header>
         <main style="list-style-type:none;">
-			<p>Talk to other people on the website. Chat powered by tlk.io (If you use any privacy plugins such as Privacy Possum you may need to disable them for social media logins)</p>
+			<p>Talk to other people on the website. Twitter required for safety (May need to disable privacy plugins)</p>
 		</main>
-		<div id="tlkio" data-channel="glacierdogfrostbite" data-theme="theme--night" style="width:100%;height:100%;"></div><script async src="https://tlk.io/embed.js" type="text/javascript"></script>
+		<div id="tlkio" data-channel="frostbiteglacierdog" data-theme="theme--night" style="width:100%;height:100%;"></div><script async src="https://tlk.io/embed.js" type="text/javascript"></script>
     </body>
 </html>
