--- a/chat/index.html
+++ b/chat/index.html
@@ -1,23 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
     <head>
-		<meta property="og:title" content="Chat">
-		<meta property="og:site_name" content="Glacier Dog">
+	
+		<meta property="og:title" content="404..?">
+		<meta property="og:site_name" content="Glacier Dog Not Found">
 		<meta property="og:url" content="https://glacier.dog/">
-		<meta property="og:description" content="Grrr, bark, woof, woof, AWROOOOOO!">
+		<meta property="og:description" content="Grrr, bark.. bark.. a-awoo..?">
 		<meta property="og:type" content="website">
-		<meta property="og:image" content="https://cdn.jsdelivr.net/gh/noblereign/noblereign.github.io/glacierdog.jpg">
+		<meta property="og:image" content="https://cdn.jsdelivr.net/gh/noblereign/noblereign.github.io/missing_content.jpg">
 	
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		
-		<meta charset="utf-8">
-		<meta name="Description" CONTENT="A chat room powered by tlk.io, because why not?">
-	
-        <title>Talk to Glacier Dog</title>
-		<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-		<link rel="manifest" href="site.webmanifest">
+        <title>Uhhh.. meow?</title>
+		<link rel="apple-touch-icon" sizes="180x180" href="https://cdn.jsdelivr.net/gh/noblereign/noblereign.github.io/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="https://cdn.jsdelivr.net/gh/noblereign/noblereign.github.io/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="https://cdn.jsdelivr.net/gh/noblereign/noblereign.github.io/favicon-16x16.png">
+		<link rel="manifest" href="https://cdn.jsdelivr.net/gh/noblereign/noblereign.github.io/site.webmanifest">
         <link rel="stylesheet" href="style.css">
 		<style>
 			@import url('https://fonts.googleapis.com/css2?family=Catamaran:wght@300;400;500;600;700&display=swap');
@@ -49,13 +45,14 @@
     </head>
     <body>
 		<header>
-			<p>Chat</p>
+			<p>404</p>
+			<span id="splash">Chat? What chat? There's nothing here but void dogs and helplessness.<br></span>
 			<a href="https://glacier.dog">go back</a>
-			<hr class="seperator">
 		</header>
-        <main style="list-style-type:none;">
-			<p>Talk to other people on the website. Twitter required for safety (May need to disable privacy plugins)</p>
-		</main>
-		<div id="tlkio" data-channel="frostbiteglacierdog" data-theme="theme--night" style="width:100%;height:100%;"></div><script async src="https://tlk.io/embed.js" type="text/javascript"></script>
+		<footer>
+			<span>art by </span>
+			<a href="https://twitter.com/Frickle_">Meijer</a>
+		</footer>
+		<script src="itneverexisted.js"></script>
     </body>
 </html>
