--- a/chat/index.html
+++ b/chat/index.html
@@ -46,7 +46,7 @@
     <body>
 		<header>
 			<p>404</p>
-			<span id="splash">Chat? What chat? There's nothing here but void dogs and helplessness.<br></span>
+			<span id="splash">Chat? What chat? There's nothing here but void dogs and hopelessness.<br></span>
 			<a href="https://glacier.dog">go back</a>
 		</header>
 		<footer>
