--- a/chat/index.html
+++ b/chat/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
 	
-		<meta property="og:title" content="404..?">
+		<meta property="og:title" content="404">
 		<meta property="og:site_name" content="Glacier Dog Not Found">
 		<meta property="og:url" content="https://glacier.dog/">
 		<meta property="og:description" content="Grrr, bark.. bark.. a-awoo..?">
