become Mobile Compatible + better 404 maybe

--- a/404.html
+++ b/404.html
@@ -9,6 +9,10 @@
 		<meta property="og:type" content="website">
 		<meta property="og:image" content="https://cdn.jsdelivr.net/gh/noblereign/noblereign.github.io/missing_content.jpg">
 	
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta charset="utf-8">
+		<meta name="Description" CONTENT="Oh, four oh four.">
+		
         <title>Uhhh.. meow?</title>
 		<link rel="apple-touch-icon" sizes="180x180" href="https://cdn.jsdelivr.net/gh/noblereign/noblereign.github.io/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="https://cdn.jsdelivr.net/gh/noblereign/noblereign.github.io/favicon-32x32.png">
