--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
 		<meta property="og:type" content="website">
 		<meta property="og:image" content="https://cdn.jsdelivr.net/gh/noblereign/noblereign.github.io/glacierdog.jpg">
 		
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta charset="utf-8">
 		<meta name="Description" CONTENT="Welcome to my personal website, Glacier Dog! Used to show off cool-ish things I own/have done. Take a look around!">
 		
 		<script src="snowstorm.js"></script>
         <title>Glacier Dog</title>
-		<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-		<link rel="manifest" href="site.webmanifest">
+		<link rel="apple-touch-icon" sizes="180x180" href="https://cdn.jsdelivr.net/gh/noblereign/noblereign.github.io/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="https://cdn.jsdelivr.net/gh/noblereign/noblereign.github.io/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="https://cdn.jsdelivr.net/gh/noblereign/noblereign.github.io/favicon-16x16.png">
+		<link rel="manifest" href="https://cdn.jsdelivr.net/gh/noblereign/noblereign.github.io/site.webmanifest">
         <link rel="stylesheet" href="style.css">
 		<style>
 			@import url('https://fonts.googleapis.com/css2?family=Catamaran:wght@300;400;500;600;700&display=swap');
