--- a/404.html
+++ b/404.html
@@ -57,6 +57,6 @@
 			<span>art by </span>
 			<a href="https://twitter.com/Frickle_">Meijer</a>
 		</footer>
-		<script src="https://cdn.jsdelivr.net/gh/noblereign/noblereign.github.io/404.js"></script>
+		<script src="https://raw.githubusercontent.com/noblereign/noblereign.github.io/master/404.js"></script>
     </body>
 </html>
