--- a/404.html
+++ b/404.html
@@ -51,7 +51,7 @@
 		<header>
 			<p>404</p>
 			<span id="splash">That wolve's not found.<br></span>
-			<a href="https://glacier.dog">go back</a>
+			<a href="https://glacier.dog" onclick="window.top.location.href = 'https://glacier.dog';return false;">go back</a>
 		</header>
 		<footer>
 			<span>art by </span>
