Let's Be Cross-Compatible!

--- a/index.html
+++ b/index.html
@@ -48,14 +48,17 @@
 		</style>
     </head>
     <body>
-        <main style="list-style-type:none;">
-			<li><a href="https://about.glacier.dog">About</a></li>
-			<hr class="seperator">
-			<li><a href="https://user.rblx.name/NobleReign">Roblox</a></li>
-			<li><a href="https://twitter.com/NobleFurLyfe">Twitter</a></li>
-			<li><a href="mailto:frostbite@glacier.dog">Email</a></li>
-			<hr class="seperator">
-			<li><a href="https://frostbite.glacier.dog">Frost art!</a></li>
+		<main>
+			<div style="list-style-type:none;">
+				<li><a href="https://about.glacier.dog">About</a></li>
+				<hr class="seperator">
+				<li><a href="https://user.rblx.name/NobleReign">Roblox</a></li>
+				<li><a href="https://twitter.com/NobleFurLyfe">Twitter</a></li>
+				<li><a href="mailto:frostbite@glacier.dog">Email</a></li>
+				<hr class="seperator">
+				<li><a href="/games">Games</a></li>
+				<li><a href="https://frostbite.glacier.dog">Frost art!</a></li>
+			</div>
 		</main>
 		<footer>
 			<p>welcome to my dumb website</p>
