--- a/games/index.html
+++ b/games/index.html
@@ -2,14 +2,14 @@
 <html>
     <head>
 	
-		<meta property="og:title" content="410">
-		<meta property="og:site_name" content="Gone.">
+		<meta property="og:title" content="404">
+		<meta property="og:site_name" content="Glacier Dog Not Found">
 		<meta property="og:url" content="https://glacier.dog/">
-		<meta property="og:description" content="Grrr, bark.. bark.. a-awoo..?">
+		<meta property="og:description" content="...yet.">
 		<meta property="og:type" content="website">
 		<meta property="og:image" content="https://cdn.jsdelivr.net/gh/noblereign/noblereign.github.io/missing_content.jpg">
 	
-        <title>Gone.</title>
+        <title>Uhhh.. meow?</title>
 		<link rel="apple-touch-icon" sizes="180x180" href="https://cdn.jsdelivr.net/gh/noblereign/noblereign.github.io/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="https://cdn.jsdelivr.net/gh/noblereign/noblereign.github.io/favicon-32x32.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="https://cdn.jsdelivr.net/gh/noblereign/noblereign.github.io/favicon-16x16.png">
@@ -45,14 +45,14 @@
     </head>
     <body>
 		<header>
-			<p>410</p>
-			<span id="splash">Chat? What chat? There's nothing here but void dust and hopelessness.<br></span>
+			<p>404</p>
+			<span id="splash">Coming Soon<br></span>
 			<a href="https://glacier.dog">go back</a>
 		</header>
 		<footer>
 			<span>art by </span>
 			<a href="https://twitter.com/Frickle_">Meijer</a>
 		</footer>
-		<script src="itneverexisted.js"></script>
+		<script src="notyet.js"></script>
     </body>
 </html>
