a whole lotta games page

--- a/games/index.html
+++ b/games/index.html
@@ -1,19 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-	
-		<meta property="og:title" content="404">
-		<meta property="og:site_name" content="Glacier Dog Not Found">
-		<meta property="og:url" content="https://glacier.dog/">
-		<meta property="og:description" content="...yet.">
+		<meta property="og:title" content="Games">
+		<meta property="og:site_name" content="Glacier Dog">
+		<meta property="og:url" content="https://frostbite.glacier.dog/">
+		<meta property="og:description" content="Check out my games!">
 		<meta property="og:type" content="website">
-		<meta property="og:image" content="https://cdn.jsdelivr.net/gh/noblereign/noblereign.github.io/missing_content.jpg">
-	
-        <title>Uhhh.. meow?</title>
+		<meta property="og:image" content="https://github.com/noblereign/noblereign.github.io/raw/master/glacierdog.jpg">
+
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta charset="utf-8">
+		<meta name="Description" CONTENT="Various games that Noble has made.">
+
+		<script src="snowstorm.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <title>Gaming Glacier Dog</title>
 		<link rel="apple-touch-icon" sizes="180x180" href="https://cdn.jsdelivr.net/gh/noblereign/noblereign.github.io/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="https://cdn.jsdelivr.net/gh/noblereign/noblereign.github.io/favicon-32x32.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="https://cdn.jsdelivr.net/gh/noblereign/noblereign.github.io/favicon-16x16.png">
 		<link rel="manifest" href="https://cdn.jsdelivr.net/gh/noblereign/noblereign.github.io/site.webmanifest">
+		<!--Import materialize.css-->
+		<link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+		<!--Import FontAwesome-->
+		<script src="https://kit.fontawesome.com/c4799e61cc.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="style.css">
 		<style>
 			@import url('https://fonts.googleapis.com/css2?family=Catamaran:wght@300;400;500;600;700&display=swap');
@@ -45,14 +54,25 @@
     </head>
     <body>
 		<header>
-			<p>404</p>
-			<span id="splash">Coming Soon<br></span>
+			<p>Games</p>
 			<a href="https://glacier.dog">go back</a>
 		</header>
-		<footer>
-			<span>art by </span>
-			<a href="https://twitter.com/Frickle_">Meijer</a>
-		</footer>
-		<script src="notyet.js"></script>
+		<hr class="seperator">
+        <main style="list-style-type:none;">
+			<p>Various games that I've made, ranging from busses to punches!</p>
+			<!--
+			<div class="grid-container">
+				<div class="card">
+					<div class="bg-img"></div>
+					<div class="content">
+						<h4>Card title</h4>
+						<p>Content....</p> <button id="play"><i class="fas fa-play"></i></button> <button id="more">View on Roblox</button> 
+					</div>
+				</div>
+			</div>
+			-->
+		</main>
+		<script type="text/javascript" src="js/materialize.min.js"></script>
+		<script type="text/javascript" src="games.js"></script>
     </body>
 </html>
