--- a/games/index.html
+++ b/games/index.html
@@ -60,7 +60,7 @@
 		<hr class="seperator">
         <main style="list-style-type:none;">
 			<p>Various games that I've made, ranging from busses to punches!</p>
-			<div class="grid-container">
+			<div class="grid-container" id="contain">
 				<!--
 				<div class="card">
 					<div class="bg-img"></div>
