--- a/games/index.html
+++ b/games/index.html
@@ -59,7 +59,7 @@
 		</header>
 		<hr class="seperator">
         <main style="list-style-type:none;">
-			<p>Various games that I've made, ranging from busses to punches!</p>
+			<p>Various games that I've made, from neverending busses to the heftiest of punches!</p>
 			<div class="grid-container" id="contain">
 				<!--
 				<div class="card">
