--- a/404.html
+++ b/404.html
@@ -2,8 +2,8 @@
 <html>
     <head>
 	
-		<meta property="og:title" content="404">
-		<meta property="og:site_name" content="Glacier Dog Not Found">
+		<meta property="og:title" content="Glacier Dog Not Found">
+		<meta property="og:site_name" content="404">
 		<meta property="og:url" content="https://glacier.dog/">
 		<meta property="og:description" content="Enter The Void">
 		<meta property="og:type" content="website">
