--- a/is-on/404.html
+++ b/is-on/404.html
@@ -2,23 +2,27 @@
 <html>
     <head>
 	
-		<meta property="og:title" content="Gone.">
-		<meta property="og:site_name" content="410">
+		<meta property="og:title" content="glacier dog isn't there.">
+		<meta property="og:site_name" content="...not.">
 		<meta property="og:url" content="https://glacier.dog/">
-		<meta property="og:description" content="Grrr, bark.. bark.. a-awoo..?">
+		<meta property="og:description" content="try again later.">
 		<meta property="og:type" content="website">
 		<meta property="og:image" content="https://cdn.jsdelivr.net/gh/noblereign/noblereign.github.io/missing_content.jpg">
+	
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta charset="utf-8">
+		<meta name="Description" CONTENT="glacier dog's not there.">
 		
 		<meta name="robots" content="noindex" />
-	
-        <title>Gone.</title>
+		
+        <title>glacier.dog is-not-on</title>
 		<link rel="apple-touch-icon" sizes="180x180" href="https://cdn.jsdelivr.net/gh/noblereign/noblereign.github.io/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="https://cdn.jsdelivr.net/gh/noblereign/noblereign.github.io/favicon-32x32.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="https://cdn.jsdelivr.net/gh/noblereign/noblereign.github.io/favicon-16x16.png">
 		<link rel="manifest" href="https://cdn.jsdelivr.net/gh/noblereign/noblereign.github.io/site.webmanifest">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="404.css">
 		<style>
-			@import url('https://fonts.googleapis.com/css2?family=Catamaran:wght@300;400;500;600;700&display=swap');
+			@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
 			a:link {
 			  color: #ffd633;
 			  background-color: transparent;
@@ -46,15 +50,10 @@
 		</style>
     </head>
     <body>
-		<header>
-			<p>410</p>
-			<span id="splash">Chat? What chat? There's nothing here but void dust and hopelessness.<br></span>
-			<a href="https://glacier.dog">go back</a>
-		</header>
-		<footer>
-			<span>art by </span>
-			<a href="https://twitter.com/Frickle_">Meijer</a>
-		</footer>
-		<script src="itneverexisted.js"></script>
+		<main>
+			<div>
+				<p>unfortunately, glacier dog is not on that site.<br>you can always check back later, or just <a href="https://glacier.dog" onclick="window.top.location.href = 'https://glacier.dog';return false;">go home.</a></p>
+			</div>
+		</main>
     </body>
 </html>
