--- a/is-on/youtube/index.html
+++ b/is-on/youtube/index.html
@@ -2,23 +2,29 @@
 <html>
     <head>
 	
-		<meta property="og:title" content="Gone.">
-		<meta property="og:site_name" content="410">
+		<meta property="og:title" content="YouTube!">
+		<meta http-equiv="refresh" content="0; URL=https://www.youtube.com/c/NobleFurLyfe"/>
+		
+		<meta property="og:site_name" content="Glacier Dog is on...">
 		<meta property="og:url" content="https://glacier.dog/">
-		<meta property="og:description" content="Grrr, bark.. bark.. a-awoo..?">
+		<meta property="og:description" content="Quicklink">
 		<meta property="og:type" content="website">
-		<meta property="og:image" content="https://cdn.jsdelivr.net/gh/noblereign/noblereign.github.io/missing_content.jpg">
+		<meta property="og:image" content="https://cdn.jsdelivr.net/gh/noblereign/noblereign.github.io/is-on/icon.png">
+	
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta charset="utf-8">
+		<meta name="Description" CONTENT="glacier.dog quick social media link">
 		
 		<meta name="robots" content="noindex" />
-	
-        <title>Gone.</title>
+		
+        <title>glacier.dog is-not-on</title>
 		<link rel="apple-touch-icon" sizes="180x180" href="https://cdn.jsdelivr.net/gh/noblereign/noblereign.github.io/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="https://cdn.jsdelivr.net/gh/noblereign/noblereign.github.io/favicon-32x32.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="https://cdn.jsdelivr.net/gh/noblereign/noblereign.github.io/favicon-16x16.png">
 		<link rel="manifest" href="https://cdn.jsdelivr.net/gh/noblereign/noblereign.github.io/site.webmanifest">
         <link rel="stylesheet" href="style.css">
 		<style>
-			@import url('https://fonts.googleapis.com/css2?family=Catamaran:wght@300;400;500;600;700&display=swap');
+			@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
 			a:link {
 			  color: #ffd633;
 			  background-color: transparent;
@@ -46,15 +52,5 @@
 		</style>
     </head>
     <body>
-		<header>
-			<p>410</p>
-			<span id="splash">Chat? What chat? There's nothing here but void dust and hopelessness.<br></span>
-			<a href="https://glacier.dog">go back</a>
-		</header>
-		<footer>
-			<span>art by </span>
-			<a href="https://twitter.com/Frickle_">Meijer</a>
-		</footer>
-		<script src="itneverexisted.js"></script>
     </body>
 </html>
