--- a/the-funny/index.html
+++ b/the-funny/index.html
@@ -8,6 +8,8 @@
 		<meta property="og:type" content="website">
 		<meta property="og:image" content="https://cdn.jsdelivr.net/gh/noblereign/noblereign.github.io/glacierdog.jpg">
 		
+		<meta name="robots" content="noindex" />
+		
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta charset="utf-8">
 		<meta name="Description" CONTENT="Welcome to my personal website, Glacier Dog! Used to show off cool-ish things I own/have done. Take a look around!">
