--- a/games/index.html
+++ b/games/index.html
@@ -10,7 +10,9 @@
 
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta charset="utf-8">
-		<meta name="Description" CONTENT="Various games that Noble has made.">
+		<meta name="Description" CONTENT="Various games that I've made! There's more than just Bus Simulator and Kit Battle!">
+		
+		<meta name="robots" content="noindex" />
 
 		<script src="snowstorm.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
