fix spelling error, also wip stuff
waa

--- a/carrd/index.html
+++ b/carrd/index.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-	
-		<meta property="og:title" content="Glacier Dog Not Found">
-		<meta property="og:site_name" content="404">
-		<meta property="og:url" content="https://glacier.dog/">
-		<meta property="og:description" content="Enter The Void">
+		<meta property="og:title" content="carrd">
+		<meta property="og:site_name" content="Glacier Dog">
+		<meta property="og:url" content="https://www.glacier.dog/">
+		<meta property="og:description" content="welcome to frostbite's void">
 		<meta property="og:type" content="website">
-		<meta property="og:image" content="https://cdn.jsdelivr.net/gh/noblereign/noblereign.github.io/missing_content.jpg">
-	
+		<meta property="og:image" content="https://cdn.jsdelivr.net/gh/noblereign/noblereign.github.io/glaciercarrd.png">
+		
+		<meta name="robots" content="noindex" />
+		
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta charset="utf-8">
-		<meta name="Description" CONTENT="Oh, four oh four.">
+		<meta name="Description" CONTENT="a carrd emulation attempt">
 		
-        <title>Uhhh.. meow?</title>
+		<script src="snowstorm.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <title>Glacier Dog</title>
 		<link rel="apple-touch-icon" sizes="180x180" href="https://cdn.jsdelivr.net/gh/noblereign/noblereign.github.io/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="https://cdn.jsdelivr.net/gh/noblereign/noblereign.github.io/favicon-32x32.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="https://cdn.jsdelivr.net/gh/noblereign/noblereign.github.io/favicon-16x16.png">
 		<link rel="manifest" href="https://cdn.jsdelivr.net/gh/noblereign/noblereign.github.io/site.webmanifest">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/noblereign/noblereign.github.io/404.css">
+        <link rel="stylesheet" href="style.css">
 		<style>
 			@import url('https://fonts.googleapis.com/css2?family=Catamaran:wght@300;400;500;600;700&display=swap');
 			a:link {
@@ -48,15 +51,6 @@
 		</style>
     </head>
     <body>
-		<header>
-			<p>404</p>
-			<span id="splash">That wolf's not found.<br></span>
-			<a href="https://glacier.dog" onclick="window.top.location.href = 'https://glacier.dog';return false;">go back</a>
-		</header>
-		<footer>
-			<span>art by </span>
-			<a href="https://twitter.com/Frickle_">Meijer</a>
-		</footer>
-		<script src="404.js"></script>
+		<p>this section of the website is not complete.<br>you can always check back later, or just <a href="https://glacier.dog" onclick="window.top.location.href = 'https://glacier.dog';return false;">go home.</a></p>
     </body>
 </html>
