--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 				<li><a href="mailto:frostbite@glacier.dog">Email</a></li>
 				<hr class="seperator">
 				<li><a href="/games">Games</a></li>
-				<li><a href="https://frostbite.glacier.dog">Frost art!</a></li>
+				<li><a href="https://frostbite.glacier.dog">Art!</a></li>
 			</div>
 		</main>
 		<footer>
