lets get splishy splashy

--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
 			</div>
 		</main>
 		<footer>
-			<p>welcome to my dumb website</p>
+			<p id="splash">welcome to my dumb website</p>
 		</footer>
+		<script src="randomsplash.js"></script>
     </body>
 </html>
