--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				<li><a href="https://twitter.com/NobleFurLyfe">Twitter</a></li>
 				<li><a rel="me" href="https://federated.glacier.dog/@frostbite">Mastodon</a></li>
 				<li><a href="https://www.last.fm/user/noblereign">Last.fm</a></li>
-				<li><a href="mailto:frostbite@glacier.dog">Email</a></li>
+				<li><a href="mailto:hello@glacier.dog">Email</a></li>
 				<hr class="seperator">
 				<li><a href="/games">Games</a></li>
 				<li><a href="https://frostbite.glacier.dog">Art!</a></li>
