--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				<hr class="seperator">
 				<li><a href="https://user.rblx.name/NobleReign">Roblox</a></li>
 				<li><a href="https://twitter.com/NobleFurLyfe">Twitter</a></li>
-				<li><a rel="me" href="https://federated.glacier.dog/@frostbite">Mastodon</a></li>
+				<li><a rel="me" href="https://wolfdo.gg/@frost">Calckey</a></li>
 				<li><a href="https://www.last.fm/user/noblereign">Last.fm</a></li>
 				<li><a href="mailto:hello@glacier.dog">Email</a></li>
 				<hr class="seperator">
